Change how the VR reticle distance is determined.

- Eliminate special-casing of UI elements on the native side.
- Use an invisible, hittable quad as the plane behind content.
- Only UI element hit points within a bounding sphere are allowed.
- Let the UI set the radius of the bounding sphere.

BUG=693154
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2698623007
Cr-Commit-Position: refs/heads/master@{#451802}

Former-commit-id: e28e50ecc0bc4077c879abc2d06957de0918e75e